--- a/src/components/sections/Text.astro
+++ b/src/components/sections/Text.astro
@@ -1,9 +1,8 @@
 ---
 const { style, text_content } = Astro.props;
 import * as marked from "marked";
-const markdown = marked.parseInline(text_content);
-
 console.log(text_content)
+const markdown = await marked.parseInline(text_content);
 ---
 
 <p class:list={[style, "prose-lg md:prose-xl px-4"]} set:html={markdown} />
