--- a/src/layouts/Flow.astro
+++ b/src/layouts/Flow.astro
@@ -18,7 +18,8 @@ const page = await getEntryBySlug("pages", slug)
 
 const { title, description, flow, hero } = page.data
 
-const allComponents = import.meta.glob("../components/**/*.astro") as Record<string, () => Promise<{default: AstroComponentFactory}>>
+const allComponents = import.meta.glob("../components/{sections,rows}/*.astro") as Record<string, () => Promise<{default: AstroComponentFactory}>>
+console.log(allComponents)
 const rowComponents = {} as Record<string, {default: AstroComponentFactory} >;
 const sectionComponents = {} as Record<
   string,
@@ -47,7 +48,7 @@ for (const sectionData of await getEntries(flow.map((row) => row.sections!.map((
           console.log(row)
           return RowComp ? (
             <RowComp {...rowProps}>
-      \        {sections ? sections.map((section: any) => {
+              {sections ? sections.map((section: any) => {
                 const {component, ...sectionProps} = section
                 const SectionComp = sectionComponents[component.slug].default
                 console.log(SectionComp)
@@ -58,5 +59,4 @@ for (const sectionData of await getEntries(flow.map((row) => row.sections!.map((
         })
       }
     </main>
-    <!-- <Footer /> -->
 </BaseLayout>
