--- a/src/components/sections/MoreInfo.astro
+++ b/src/components/sections/MoreInfo.astro
@@ -3,12 +3,12 @@ import type { moreInfoSchema } from "@/content/schemas/sections";
 import { Icon } from "astro-icon/components";
 import type { z } from "astro/zod";
 type Props = z.infer<typeof moreInfoSchema>;
-const { cards, styles } = Astro.props;
+const { more_info, styles } = Astro.props;
 ---
 
 <ul class:list={["list-none flex flex-wrap p-0 ", styles?.container]}>
   {
-    cards.map(({ icon, title }) => (
+    more_info.map(({ icon, title }) => (
       <li class:list={[styles?.card]}>
         {icon && <Icon name={icon} size={100} class="my-0 mx-40" />}
         <h3 class="text-4xl my-5">{title}</h3>
