--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,7 +5,7 @@
 @layer base {
   html {
     font-family: "sofia-pro", sans-serif;
-    @apply bg-background text-white 
+    @apply bg-background text-white;
   }
 }
 
@@ -21,7 +20,7 @@
   }
 
   .nav-active {
-    @apply linaro-gradient-text
+    @apply linaro-gradient-text;
   }
 
   .nav-inactive {
@@ -33,7 +32,7 @@
   }
 
   .linaro-gradient-button {
-    @apply px-6 py-2 bg-linaro-gradient text-white rounded-full
+    @apply px-6 py-2 bg-linaro-gradient text-white rounded-full;
   }
 
   .linaro-gradient-border {
@@ -41,30 +40,40 @@
     background-clip: padding-box; /* !importanté */
     // border: solid 10px transparent; /* !importanté */
   }
+  .small-font {
+    font-size: 0.5rem;
+  }
+
+  .large-font {
+    font-size: 1.5rem;
+  }
 
   .linaro-gradient-border::before {
-      content: '';
-      position: absolute;
-      top: 0; right: 0; bottom: 0; left: 0;
-      z-index: -1;
-      margin: -10px; 
-      border-radius: inherit; 
-      box-sizing: border-box;
-      @apply bg-linaro-gradient
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -10px;
+    border-radius: inherit;
+    box-sizing: border-box;
+    @apply bg-linaro-gradient;
   }
 
   .fade-border {
-    @apply w-full bg-border-gradient h-[2px]
+    @apply w-full bg-border-gradient h-[2px];
   }
 
   .fade-border-bottom::after {
-        content: "";
-        display: inline-block;
+    content: "";
+    display: inline-block;
 
-        @apply absolute fade-border bottom-0 
-      }
+    @apply absolute fade-border bottom-0;
+  }
 
   .purple-gradient-container {
-    @apply bg-purple-gradient py-24  pb-[12rem] mb-[-12rem]
+    @apply bg-purple-gradient py-24  pb-[12rem] mb-[-12rem];
   }
 }
