--- a/src/components/sections/MoreInfo.astro
+++ b/src/components/sections/MoreInfo.astro
@@ -8,11 +8,13 @@ const { more_info, styles } = Astro.props;
 
 <ul class:list={["list-none flex flex-wrap p-0 ", styles?.container]}>
   {
-    more_info.map(({ icon, title }) => (
-      <li class:list={[styles?.card]}>
-        {icon && <Icon name={icon} size={100} class="my-0 mx-40" />}
-        <h3 class="text-4xl my-5">{title}</h3>
-      </li>
+    more_info.map(({ icon, title, url }) => (
+      <a href={url} class="no-underline">
+        <li class:list={[styles?.card]}>
+          {icon && <Icon name={icon} size={100} class="my-0 mx-40" />}
+          <h3 class="text-4xl my-5">{title}</h3>
+        </li>
+      </a>
     ))
   }
 </ul>
