--- a/src/components/forms/MembershipCards.astro
+++ b/src/components/forms/MembershipCards.astro
@@ -1,15 +1,12 @@
 ---
 const { MemberManagementPanel, styles } = Astro.props;
-
-console.log("MemberManagementPanel", MemberManagementPanel);
 ---
 
 <ul
   class:list={[
-    "list-none flex lg:flex-row flex-col p-0 mx-auto ",
+    "list-none flex lg:flex-row flex-col items-center lg:items-stretch p-0 mx-auto justify-between w-full",
     styles?.container,
   ]}
-  style={{ gap: "1px" }}
 >
   {
     MemberManagementPanel.map(
@@ -27,12 +24,12 @@ console.log("MemberManagementPanel", MemberManagementPanel);
         },
         index: number
       ) => (
-        <li class:list={[styles?.card, "w-full lg:w-1/3", "relative"]}>
-          <p class:list={["text-base my-0", title_style]}>{title}</p>
-          <p class="text-base my-0 linaro-gradient-text">{name}</p>
-          <p class="text-xs">{description}</p>
+        <li class:list={[styles?.card, "lg:basis-1/3", "relative px-4"]}>
+          <p class:list={["text-xl my-0", title_style]}>{title}</p>
+          <p class="text-xl my-0 linaro-gradient-text">{name}</p>
+          <p class="text-md">{description}</p>
           {index < MemberManagementPanel.length - 1 && (
-            <div class="hidden lg:block absolute top-0 bottom-0 right-0 w-[1px] bg-gray-300" />
+            <div class="hidden lg:block absolute top-0 bottom-0 right-0 w-[1px] bg-grey h-24" />
           )}
         </li>
       )
