--- a/src/components/forms/MembershipForm.astro
+++ b/src/components/forms/MembershipForm.astro
@@ -1,5 +1,5 @@
 ---
-import MembershipCards from "../Membership/MembershipCards.astro";
+import MembershipCards from "./MembershipCards.astro";
 
 const { form_id, description, text, MemberManagementPanel, styles } =
   Astro.props;
@@ -13,11 +13,6 @@ const inputFields = [
   { name: "customfield_13156", label: "Last Name", type: "text" },
   { name: "email", label: "Email", type: "email" },
   { name: "customfield_13368", label: "Company Name", type: "text" },
-  {
-    name: "customfield_13365",
-    label: "How can Linaro Help you?",
-    type: "text",
-  },
 ];
 ---
 
@@ -48,6 +43,14 @@ const inputFields = [
         </>
       ))
     }
+    <label for="customfield_13365" class="sr-only">
+      How can Linaro help you?
+    </label>
+    <textarea
+      name="customfield_13365"
+      required
+      placeholder="How can Linaro help you?"
+      class="text-black pl-2 h-12 w-full h-24"></textarea>
     <label for="agreed" class="text-white"
       ><input type="checkbox" name="agreed" class="mr-2" required />I’ve read
       and agreed to Linaro’s <a href="/privacy-policy" class="text-white"
