--- a/src/components/sections/ImageCards.astro
+++ b/src/components/sections/ImageCards.astro
@@ -2,12 +2,12 @@
 import type { imageCardsSchema } from "@/content/schemas/sections";
 import type { z } from "astro/zod";
 import CloudinaryImg from "../cloudinary/CloudinaryImg.astro";
-import { image } from "@cloudinary/url-gen/qualifiers/source";
+
 type Props = z.infer<typeof imageCardsSchema>;
 const { cards, styles } = Astro.props;
 ---
 
-<ul class:list={["list-none flex flex-wrap p-0 ", styles?.container]}>
+<ul class:list={["list-none  p-0 ", styles?.container]}>
   {
     cards.map(({ image, title, text, button }) => (
       <li class:list={[styles?.card]}>
@@ -21,10 +21,17 @@ const { cards, styles } = Astro.props;
           />
         )}
         <h3 class:list={[styles?.card_title]}>{title}</h3>
-        <p class="text-xl">{text}</p>
+        <p class="text-lg w-full">{text}</p>
         {button && (
-          <a href={button.url}>
-            <button class={`linaro-gradient-button `}>{button.text}</button>
+          <a href={button.url} class="self-start">
+            <button
+              class:list={[
+                `linaro-gradient-button justify-self-start items-start `,
+                styles?.button_style,
+              ]}
+            >
+              {button.text}
+            </button>
           </a>
         )}
       </li>
