Add: contact page

--- a/src/components/sections/CardGrid.astro
+++ b/src/components/sections/CardGrid.astro
@@ -9,16 +9,24 @@ const { cards, styles } = Astro.props;
 
 <ul class:list={["list-none flex flex-wrap p-0 ", styles?.container]}>
   {
-    cards.map(async ({ icon, title, text, button }) => {
+    cards.map(async ({ icon, title, text, button }, index) => {
       const content = text ? await marked.parse(text) : null;
       return (
         <li class:list={[styles?.card]}>
           {icon && <Icon name={icon} size={100} class="my-0" />}
           <h3 class:list={["text-4xl my-5", styles?.card_title]}>{title}</h3>
-          <div set:html={content} class:list={["text-xl"]} />
+
+          <div class={`text-xl`} set:html={content} />
+
           {button && (
             <a href={button.url}>
-              <button class={`linaro-gradient-button `}>{button.text}</button>
+              <button
+                class:list={[
+                  `linaro-gradient-button ${index !== 0 ? styles?.button_style : ""}`,
+                ]}
+              >
+                {button.text}
+              </button>
             </a>
           )}
         </li>
