--- a/src/components/sections/ImageCards.astro
+++ b/src/components/sections/ImageCards.astro
@@ -3,13 +3,14 @@ import type { imageCardsSchema } from "@/content/schemas/sections";
 import type { z } from "astro/zod";
 import CloudinaryImg from "../cloudinary/CloudinaryImg.astro";
 import { marked } from "marked";
+import { style } from "solid-js/web";
 type Props = z.infer<typeof imageCardsSchema>;
 const { cards, styles } = Astro.props;
 ---
 
 <ul class:list={["list-none   p-0 ", styles?.container]}>
   {
-    cards.map(async ({ image, title, text, button }) => {
+    cards.map(async ({ image, title, text, button, style }) => {
       const content = text ? await marked.parse(text) : null;
       return (
         <li class:list={[styles?.card]}>
@@ -23,7 +24,7 @@ const { cards, styles } = Astro.props;
             />
           )}
           <h3 class:list={[styles?.card_title]}>{title}</h3>
-          <div class="text-xl" set:html={content} />
+          <div class:list={["text-xl", style]} set:html={content} />
           {button && (
             <a href={button.url} class="self-start">
               <button
