implement news search and layout

--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -4,6 +4,7 @@
 import { SEO } from "astro-seo";
 import "@fontsource/lato";
 import "../../styles/global.scss";
+import "../../styles/cloudinary.min.css";
 
 // const GA_ID = import.meta.env.GA_ID;
 
@@ -62,5 +63,4 @@ const social_image = "";
     }}
   />
   <link rel="stylesheet" href="https://use.typekit.net/job6bfm.css" />
-  <link href="https://unpkg.com/cloudinary-video-player@1.11.0/dist/cld-video-player.min.css" rel="stylesheet">
 </head>
