--- a/src/pages/news/index.astro
+++ b/src/pages/news/index.astro
@@ -8,7 +8,7 @@ import { getCollection } from "astro:content";
 const tags = await getCollection("tags");
 const optimizedBackground = await getImage({
   src: getCloudinarySrc({
-    src: "linaro-website/graphics/bg-logo-3",
+    src: "linaro-website/graphics/purple-map",
     alt: "",
     width: 1724.55,
     height: 1182.9,
@@ -18,7 +18,7 @@ const optimizedBackground = await getImage({
 });
 ---
 
-<BaseLayout title="Linaro | Blogs" description="A list of blogs">
+<BaseLayout title="Linaro | Newsroom" description="A list of blogs">
   <div
     class="purple-gradient-container absolute h-[50rem] w-full z-[-1] top-[30rem]"
   >
@@ -26,8 +26,8 @@ const optimizedBackground = await getImage({
   <main
     class="hero-background-image container mx-auto px-2 sm:px-4 md:px-8 z-0"
   >
-    <h1 class="text-5xl my-12 font-bold">Blog</h1>
-    <BlogSearch client:only="solid-js" tags={tags} type="blogs" />
+    <h1 class="text-5xl my-12 font-bold">Newsroom</h1>
+    <BlogSearch client:only="solid-js" tags={tags} type="news" />
   </main>
 </BaseLayout>
 <style
