--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,25 +27,47 @@
     @apply text-white;
   }
 
+  // gradient text 
   .linaro-gradient-text {
     @apply bg-linaro-gradient bg-clip-text text-transparent;
   }
 
+  // gradient button
   .linaro-gradient-button {
-    @apply px-6 py-2 bg-linaro-gradient text-white rounded-full;
+    @apply relative px-6 py-2 bg-linaro-gradient text-white rounded-full overflow-hidden;
+    position: relative;
+    overflow: hidden;
+
   }
 
+  .linaro-gradient-button::before {
+    content: '';
+    position: absolute;
+    width: 150px;
+    height: 100%;
+    background-image: linear-gradient(
+        120deg,
+        rgba(255,255,255, 0) 30%,
+        rgba(255,255,255, 0.3),
+        rgba(255,255,255, 0) 70%
+    );
+    top: 0;
+    left: -150px;
+    transition: none
+    
+  }
+  .linaro-gradient-button:hover::before {
+    left: 100%;
+    transition: all 0.65s ease-out
+
+  }
+
+  // gradient-border
   .linaro-gradient-border {
     position: relative;
     background-clip: padding-box; 
   }
-  .small-font {
-    font-size: 0.5rem;
-  }
 
-  .large-font {
-    font-size: 1.5rem;
-  }
 
   .linaro-gradient-border::before {
     content: "";
@@ -61,6 +83,7 @@
     @apply bg-linaro-gradient;
   }
 
+  // fading section divider
   .fade-border {
     @apply w-full bg-border-gradient h-[2px];
   }
