grayscale blog images

--- a/src/components/article/ArticleContent.astro
+++ b/src/components/article/ArticleContent.astro
@@ -15,6 +15,7 @@ const { Content, image } = Astro.props;
     height={1000}
     class="w-full object-cover max-h-[30rem] rounded-t-[14px] p-0"
     data-pagefind-meta="image[src], image_alt[alt]"
+    effects={["grayscale"]}
   />
   <article
     class="prose prose-invert prose-xl mx-auto max-w-full px-8 prose-a:text-blue-200 py-24"
