--- a/src/components/cloudinary/CloudinaryImg.astro
+++ b/src/components/cloudinary/CloudinaryImg.astro
@@ -38,6 +38,7 @@ import {
 
 import { type CloudinaryProps } from "../../types/CloudinaryProps";
 import { Image } from "astro:assets";
+import { getCloudinarySrc } from "@/lib/cloudinary";
 
 const cloudName = import.meta.env.CLOUDINARY_CLOUD_NAME;
 const apiKey = import.meta.env.CLOUDINARY_API_KEY;
@@ -60,6 +61,7 @@ interface Props extends CloudinaryProps {
   alt: string;
   errorImage?: string;
   class?: string;
+  svg?: boolean;
 }
 
 const { src: initialSrc, ...props } = Astro.props;
@@ -69,138 +71,7 @@ if (src.startsWith("/")) {
   src = initialSrc.slice(1);
 }
 
-const imageSource = src.startsWith("https://")
-  ? cloudinaryMedia.image(src).setDeliveryType("fetch")
-  : cloudinaryMedia.image(src);
-
-if (props.effects !== undefined && props.effects !== null) {
-  for (var i = 0; i < props.effects.length; i++) {
-    let effectFunction;
-    switch (props.effects[i]) {
-      case "blur":
-        effectFunction = blur();
-        break;
-      case "grayscale":
-        effectFunction = grayscale();
-        break;
-      case "sepia":
-        effectFunction = sepia();
-        break;
-      case "shadow":
-        effectFunction = shadow();
-        break;
-      case "colorize":
-        effectFunction = colorize();
-        break;
-      case "oilPaint":
-        effectFunction = oilPaint();
-        break;
-      case "cartoonify":
-        effectFunction = cartoonify();
-        break;
-      case "outline":
-        effectFunction = outline();
-        break;
-      case "blackwhite":
-        effectFunction = blackwhite();
-        break;
-      case "makeTransparent":
-        effectFunction = makeTransparent();
-        break;
-      case "vectorize":
-        effectFunction = vectorize();
-        break;
-      case "gradientFade":
-        effectFunction = gradientFade();
-        break;
-      case "assistColorBlind":
-        effectFunction = assistColorBlind();
-        break;
-      case "backgroundRemoval":
-        effectFunction = backgroundRemoval();
-        break;
-      case "dropShadow":
-        effectFunction = dropShadow();
-        break;
-      default:
-        effectFunction = blur();
-        break;
-    }
-    imageSource.effect(effectFunction);
-  }
-}
-
-if (props.resize !== undefined && props.resize !== null) {
-  let resizeFunction;
-  switch (props.resize) {
-    case "crop":
-      resizeFunction = crop();
-      break;
-    case "fill":
-      resizeFunction = fill();
-      break;
-    case "scale":
-      resizeFunction = scale();
-      break;
-    case "minimumPad":
-      resizeFunction = minimumPad();
-      break;
-    case "fit":
-      resizeFunction = fit();
-      break;
-    case "limitFit":
-      resizeFunction = limitFit();
-      break;
-    case "thumbnail":
-      resizeFunction = thumbnail();
-      break;
-    case "limitFill":
-      resizeFunction = limitFill();
-      break;
-    case "minimumFit":
-      resizeFunction = minimumFit();
-      break;
-    case "limitPad":
-      resizeFunction = limitPad();
-      break;
-    case "fillPad":
-      resizeFunction = fillPad();
-      break;
-    default:
-      resizeFunction = fill();
-      break;
-  }
-
-  resizeFunction.width(`${props.width}px`);
-  resizeFunction.height(`${props.height}px`);
-
-  if (
-    resizeFunction instanceof ResizeFillAction &&
-    props.gravity !== undefined &&
-    props.gravity !== null
-  ) {
-    (resizeFunction as ResizeFillAction).gravity(
-      props.gravity === "face" ? focusOn(FocusOn.faces()) : autoGravity()
-    );
-  }
-
-  imageSource.resize(resizeFunction);
-}
-
-if (props.cornerRadius !== undefined && props.cornerRadius !== null) {
-  imageSource.roundCorners(
-    props.cornerRadius === "max" ? max() : byRadius(props.cornerRadius)
-  );
-}
-
-if (props.rotate !== undefined && props.rotate !== null) {
-  imageSource.rotate(byAngle(props.rotate));
-}
-
-let errorFunction;
-if (props.errorImage !== "") {
-  errorFunction = `this.onerror=null;this.src='${props.errorImage}';`;
-}
+const url = getCloudinarySrc({ ...props, src: initialSrc });
 ---
 
-<Image src={imageSource.toURL()} loading="lazy" inferSize={true} {...props} />
+<Image src={url} loading="lazy" inferSize={true} {...props} />
